<resources>
    <string name="app_name">Plumber Hub</string>
    <string name="main_menu">Main Menu</string>
    <string name="txt_trs">Trips</string>
    <string name="txt_tls">Tools</string>
    <string name="txt_cus">Customers</string>
    <string name="txt_srv">Services</string>
    <string name="txt_save">Save</string>
    <string name="txt_select_image">Select Image</string>
    <string name="txt_clear">Clear</string>
    <string name="txt_pick_date_time">Schedule Date</string>
    <string name="txt_logout">Log Out</string>
    <string name="txt_login">Log In</string>
    <string name="txt_call">Call</string>
    <string name="txt_send_email">Send Email</string>
    <string name="txt_send_text">Send Text</string>
    <string name="txt_save_contact">Save Contact</string>
    <string name="txt_clear_images">Clear Images</string>
    <string name="txt_email_invoice">Email Invoice</string>
    <string name="txt_take_picture">Take Picture</string>

    <string name="txt_add_trs">Add New Trip</string>
    <string name="txt_add_cus">Add New Customer</string>
    <string name="txt_add_srv">Add New Service</string>

    <string name="txt_edit_trs">Edit Trip</string>
    <string name="txt_edit_cus">Edit Customer</string>
    <string name="txt_edit_tls">Edit Tool</string>
    <string name="txt_edit_srv">Edit Service</string>

    <string name="tls_hint">Enter tool name</string>
    <string name="cus_hint_name">Enter name</string>
    <string name="cus_hint_email">Enter email</string>
    <string name="cus_hint_phone">Enter phone</string>
    <string name="cus_hint_address">Enter address</string>
    <string name="srv_hint_title">Enter title</string>
    <string name="srv_hint_description">Enter description</string>
    <string name="srv_hint_tools">Enter comma-separated tools</string>
    <string name="srv_hint_price">Enter price</string>
    <string name="trs_hint_name">Enter customer name</string>
    <string name="trs_hint_services">Enter comma-separated services</string>
    <string name="trs_hint_total_cost">Enter total cost</string>
    <string name="trs_hint_cust_email">Enter customer email</string>

    <string name="service_title">Title</string>
    <string name="service_price">$%.2f</string>
    <string name="service_tools">Tools: Rake, Hammer, Nails</string>
    <string name="service_description">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>

    <string name="trip_cust_name">Razvan Nesiu</string>
    <string name="trip_price">$25</string>
    <string name="trip_services">Services: Bathtub Reparation, Leaf Raking</string>
    <string name="trip_date">25, December 2017, 15:30</string>
    <string name="trip_cust_email">razvannesiu@gmail.com</string>

    <string name="customer_name">Razvan Nesiu</string>
    <string name="customer_address">6821 Main Street, Vancouver</string>
    <string name="customer_email">nesiurazvan@yahoo.com</string>
    <string name="customer_phone">6048091984</string>

    <string-array name="tls_menu">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    <string-array name="trs_menu">
        <item>Edit</item>
        <item>Delete</item>
        <item>Clear Images</item>
        <item>Take Picture</item>
        <item>Email Invoice</item>
    </string-array>

    <string-array name="cus_menu">
        <item>Edit</item>
        <item>Delete</item>
        <item>Call</item>
        <item>Save Contact</item>
        <item>Send Text</item>
        <item>Send Email</item>
    </string-array>

</resources>
