<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.plumberhub.com.plumberhubapp.DialogNewService"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/txt_add_srv"
        style="@style/txt_title_style"/>

    <EditText
        android:id="@+id/edtNewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/srv_hint_title"
        />

    <EditText
        android:id="@+id/edtNewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/srv_hint_description"
        />

    <EditText
        android:id="@+id/edtNewTools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/srv_hint_tools"
        />

    <EditText
        android:id="@+id/edtNewPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/srv_hint_price"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClearService"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/txt_clear"
            style="@style/btn_non_menu_style"/>

        <Button
            android:id="@+id/btnSelectImage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/txt_select_image"
            style="@style/btn_non_menu_style"/>

        <Button
            android:id="@+id/btnSaveService"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/txt_save"
            style="@style/btn_non_menu_style"/>
    </LinearLayout>

</LinearLayout>
