<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/border">

    <TextView
        android:id="@+id/txtName"
        android:text="@string/customer_name"
        android:textStyle="bold"
        android:textSize="@dimen/customer_name"
        style="@style/txt_widget_cus_style"/>

    <TextView
        android:id="@+id/txtAddress"
        android:text="@string/customer_address"
        style="@style/txt_widget_cus_style"/>

    <TextView
        android:id="@+id/txtPhone"
        android:text="@string/customer_phone"
        style="@style/txt_widget_cus_style"/>

    <TextView
        android:id="@+id/txtEmail"
        android:text="@string/customer_email"
        style="@style/txt_widget_cus_style"/>

</LinearLayout>