<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.plumberhub.com.plumberhubapp.Trips"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/txt_trs"
        style="@style/txt_title_style"/>

    <EditText
        android:id="@+id/edtNewCustName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/trs_hint_name"
        />

    <EditText
        android:id="@+id/edtNewServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/trs_hint_services"
        />

    <EditText
        android:id="@+id/edtNewTotalCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/trs_hint_total_cost"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClearTrip"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/txt_clear"
            style="@style/btn_non_menu_style"/>

        <Button
            android:id="@+id/btnPickDateTime"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/txt_pick_date_time"
            style="@style/btn_non_menu_style"/>

        <Button
            android:id="@+id/btnSaveTrip"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/txt_save"
            style="@style/btn_non_menu_style"/>

    </LinearLayout>

    <ListView
        android:id="@+id/lvTrips"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
