<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/border"
    android:layout_margin="@dimen/service_margin">

    <TextView
        android:id="@+id/txtServiceTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_title"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="@dimen/service_title"/>

    <ImageView
        android:id="@+id/imgService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_description"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/txtServiceTools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_tools"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_price"
        android:gravity="center_horizontal"
        android:textStyle="bold"/>

</LinearLayout>