<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.plumberhub.com.plumberhubapp.Tools"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/txt_tls"
            style="@style/txt_title_style"/>

        <EditText
            android:id="@+id/edtNewTool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/tls_hint"
            />

        <Button
            android:id="@+id/btnSaveTool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_save"
            style="@style/btn_non_menu_style"/>

        <ListView
            android:id="@+id/lvTools"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
</LinearLayout>
