<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="android.plumberhub.com.plumberhubapp.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/txt_menu_pad_top"
        android:textSize="@dimen/txt_menu"
        android:textColor="@color/colorAccent"
        android:text="@string/main_menu"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="428dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_est"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/txt_est"
            android:tag="@string/txt_est"
            style="@style/btn_menu_style"/>

        <Button
            android:id="@+id/btn_cus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/txt_cus"
            android:tag="@string/txt_cus"
            style="@style/btn_menu_style"/>

        <Button
            android:id="@+id/btn_trs"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/txt_trs"
            android:tag="@string/txt_trs"
            style="@style/btn_menu_style"/>

        <Button
            android:id="@+id/btn_tls"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/txt_tls"
            android:tag="@string/txt_tls"
            style="@style/btn_menu_style"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
